--- a/templates/index.html
+++ b/templates/index.html
@@ -2,17 +2,23 @@
   <head>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="/static/script.js"></script>
+    <title>Good Morning</title>
   </head>
   <body>
   <div id="clock"></div>
+  <hr>
   <table id="vice">
   </table>
+  <hr>
   <table id="kohls">
   </table>
+  <hr>
   <table id="citibike">
   </table>
+  <hr>
 
   <div id="lastupdated"></div>
+
   </body>
   
 </html>
